--- a/WellbeingPlanner/templates/settings.html
+++ b/WellbeingPlanner/templates/settings.html
@@ -10,7 +10,7 @@
 
 </head>
 <body class="{{ 'dark-mode' if dark_mode else '' }}">
-    <div class="container mt-5">
+    <div class="container">
         <h1>Settings</h1>
         <form class="{{ 'dark-mode' if dark_mode else '' }}" method="POST" action="{{ url_for('settings') }}">
             <div class="mb-3">
@@ -25,7 +25,6 @@
             </div>
             <button type="submit" class="btn btn-primary">Save Settings</button>
         </form>
-        <a href="{{ url_for('index') }}" class="btn btn-link">Back to Home</a>
     </div>
     <script src="{{ url_for('static', filename='js/dark_mode.js') }}"></script>
 </body>
